--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,22 @@
 name: Build and Test Workflow
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.14.0
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Run unit tests
+      - uses: ./.github/actions/setup-node
+      - name: Unit tests (Vitest)
         run: npm run test:unit
-      - name: Run end-to-end tests
-        run: npm run test:e2e
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: ./.github/actions/setup-node
+      - name: Production build
+        run: npm run build
+   
