--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: read
     steps:
+      - uses: actions/checkout@v6
       - uses: ./.github/actions/setup-node
       - name: Lint code
         run: npm run lint
@@ -20,6 +21,7 @@ jobs:
     permissions:
       contents: read
     steps:
+      - uses: actions/checkout@v6
       - uses: ./.github/actions/setup-node
       - name: Run unit tests with coverage
         run: npm run test:unit:coverage
@@ -42,6 +44,7 @@ jobs:
       E2E_USER_EMAIL: ${{ secrets.E2E_USER_EMAIL }}
       E2E_PASSWORD: ${{ secrets.E2E_PASSWORD }}
     steps:
+      - uses: actions/checkout@v6
       - uses: ./.github/actions/setup-node
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
