--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,6 +28,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [lint, unit-test]
+    environment: production
     permissions:
       contents: read
     env:
