--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
 	"main": "dist/_worker.js/index.js",
 	"name": "greenie",
+  "pages_build_output_dir": "dist",
   "compatibility_date": "2026-02-01",
   "compatibility_flags": [
     "nodejs_compat",
