--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,17 +1,11 @@
 {
-	"main": "dist/_worker.js/index.js",
-	"name": "greenie",
+  "name": "greenie",
   "pages_build_output_dir": "dist",
-  "compatibility_date": "2026-02-01",
+  "compatibility_date": "2024-11-01",
   "compatibility_flags": [
-    "nodejs_compat",
-    "global_fetch_strictly_public"
+    "nodejs_compat"
   ],
-	"assets": {
-		"binding": "ASSETS",
-		"directory": "./dist"
-	},
-	"observability": {
+  "observability": {
     "enabled": true
   }
 }
