--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "deploy": "wrangler pages deploy dist --project-name greenie --branch master",
+    "deploy": "wrangler pages deploy dist",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint .",
