--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,3 +32,73 @@ jobs:
         with:
           name: unit-coverage
           path: coverage
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: lint
+    environment: integration
+    permissions:
+      contents: read
+    env:
+      CI: "true"
+      ENVIRONMENT: integration
+      SUPABASE_URL: ${{ secrets.PUBLIC_SUPABASE_URL }}
+      SUPABASE_PUBLIC_KEY: ${{ secrets.PUBLIC_SUPABASE_KEY }}
+      E2E_USERNAME_ID: ${{ secrets.E2E_USERNAME_ID }}
+      E2E_USER_EMAIL: ${{ secrets.E2E_USER_EMAIL }}
+      E2E_PASSWORD: ${{ secrets.E2E_PASSWORD }}
+    steps:
+      - uses: actions/checkout@v6
+      - uses: ./.github/actions/setup-node
+      - name: Check e2e env presence
+        run: |
+          required_vars=(
+            SUPABASE_URL
+            SUPABASE_PUBLIC_KEY
+            E2E_USERNAME_ID
+            E2E_USER_EMAIL
+            E2E_PASSWORD
+          )
+          for var in "${required_vars[@]}"; do
+            if [[ -z "${!var}" ]]; then
+              echo "::error title=Missing env::${var} is not set"
+            else
+              echo "::notice title=Env present::${var} is set"
+            fi
+          done
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+      - name: Run e2e tests with coverage
+        run: npx playwright test --reporter=html --output=coverage/e2e
+      - name: Upload e2e coverage
+        uses: actions/upload-artifact@v6
+        with:
+          name: e2e-coverage
+          path: coverage/e2e
+
+  status-comment:
+    runs-on: ubuntu-latest
+    needs: [lint, unit-test, e2e-test]
+    if: ${{ success() }}
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Comment PR status
+        uses: actions/github-script@v8
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const issueNumber = context.payload.pull_request.number;
+            const runUrl = `${context.serverUrl}/${owner}/${repo}/actions/runs/${context.runId}`;
+            const body = [
+              "✅ CI status: lint + unit + e2e passed.",
+              "",
+              `Run: ${runUrl}`,
+            ].join("\n");
+            await github.rest.issues.createComment({
+              owner,
+              repo,
+              issue_number: issueNumber,
+              body,
+            });
